// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridTemplateColumns renders 0 1`] = `
Array [
  .c0 {
  grid-template-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders function 1`] = `
Array [
  .c0 {
  grid-template-columns: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-template-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders negative number 1`] = `
Array [
  .c0 {
  grid-template-columns: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-template-columns: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-columns: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-template-columns: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-columns: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-columns: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template-columns: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template-columns: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-template-columns: July;
  }
}

@media April {
  .c0 {
    grid-template-columns: August;
  }
}

@media January {
  .c0 {
    grid-template-columns: September;
  }
}

@media April {
  .c0 {
    grid-template-columns: November;
  }
}

@media June {
  .c0 {
    grid-template-columns: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-template-columns: July;
  }
}

@media April {
  .c0 {
    grid-template-columns: August;
  }
}

@media January {
  .c0 {
    grid-template-columns: September;
  }
}

@media April {
  .c0 {
    grid-template-columns: November;
  }
}

@media June {
  .c0 {
    grid-template-columns: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template-columns: January;
  }
}

@media April {
  .c0 {
    grid-template-columns: December;
  }
}

@media January {
  .c0 {
    grid-template-columns: April;
  }
}

@media April {
  .c0 {
    grid-template-columns: May;
  }
}

@media June {
  .c0 {
    grid-template-columns: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template-columns: January;
  }
}

@media April {
  .c0 {
    grid-template-columns: December;
  }
}

@media January {
  .c0 {
    grid-template-columns: April;
  }
}

@media April {
  .c0 {
    grid-template-columns: May;
  }
}

@media June {
  .c0 {
    grid-template-columns: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders postitive number 1`] = `
Array [
  .c0 {
  grid-template-columns: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders string 1`] = `
Array [
  .c0 {
  grid-template-columns: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplateColumns renders valid theme path 1`] = `
Array [
  .c0 {
  grid-template-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template-columns: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
